| Summary: | ASTERISK-29287: app.h: C++ compatibility broken | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2021-02-09 08:28:44.000-0600 | Date Closed: | 2021-02-23 13:04:16.000-0600 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/General |
| Versions: | 16.16.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The macro AST_DECLARE_APP_ARGS is no longer compatible with C++. This issue looks to have been introduced when fixing gcc-10 warnings.
When compiling this piece of code : {code} AST_DECLARE_APP_ARGS(args, AST_APP_ARG(arg1); AST_APP_ARG(arg2); ); {code} g++ gives the following error: {code} myapp.cpp:278:2: error: types may not be defined in ‘sizeof’ expressions AST_DECLARE_APP_ARGS(args, {code} I will provide a patch. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-02-09 08:28:45.430-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2021-02-09 08:41:03.958-0600 Putting into feedback since a patch is upcoming. By: Friendly Automation (friendly-automation) 2021-02-23 13:04:17.290-0600 Change 15503 merged by Friendly Automation: app.h: Restore C++ compatibility for macro AST_DECLARE_APP_ARGS [https://gerrit.asterisk.org/c/asterisk/+/15503|https://gerrit.asterisk.org/c/asterisk/+/15503] By: Friendly Automation (friendly-automation) 2021-02-23 13:20:24.163-0600 Change 15441 merged by Friendly Automation: app.h: Restore C++ compatibility for macro AST_DECLARE_APP_ARGS [https://gerrit.asterisk.org/c/asterisk/+/15441|https://gerrit.asterisk.org/c/asterisk/+/15441] By: Friendly Automation (friendly-automation) 2021-02-23 13:41:56.063-0600 Change 15504 merged by George Joseph: app.h: Restore C++ compatibility for macro AST_DECLARE_APP_ARGS [https://gerrit.asterisk.org/c/asterisk/+/15504|https://gerrit.asterisk.org/c/asterisk/+/15504] | ||